01_auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-app
  template:
    metadata:
      labels:
        app: auth-service-app
    spec:
      containers:
      - name: auth-service-cont
        image: aslambaba/auth-service:v1  # Use the local Docker registry image
        ports:
        - containerPort: 80
