08_another-dynamic-pods-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  replicas: 1  # Adjust the number of pods as needed
  selector:
    matchLabels:
      app: dynamic-pods-2
  serviceName: dynamic-pods-2  # Service name for the StatefulSet
  template:
    metadata:
      labels:
        app: dynamic-pods-2
    spec:
      containers:
        - name: dynamic-pod-2
          image: nginxdemos/hello
