02_auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service-app
  ports:
    - name: http
      port: 80 
      targetPort: 80
