07_dynamic-pods-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-pods
spec:
  selector:
    app: dynamic-pods
  ports:
    - protocol: TCP
      port: 80
