09_another-dynamic-pods-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-0
spec:
  selector:
    app: dynamic-pods-2
  ports:
    - protocol: TCP
      port: 80
